--- a/assets/scss/components/SrText.scss
+++ b/assets/scss/components/SrText.scss
@@ -7,17 +7,29 @@
     font-weight: bold;
     font-family: aeromatics;
     font-style: italic;
-    font-size: pxToRem(32) !important;
+    font-size: pxToRem(28) !important;
+
+    @media (min-width: $breakpoint-sm) {
+      font-size: pxToRem(32) !important;
+    }
   }
   &.subtitle {
     font-family: aeromatics;
-    font-size: pxToRem(24) !important;
+    font-size: pxToRem(20) !important;
     font-style: italic;
     font-weight: bold;
+    @media (min-width: $breakpoint-sm) {
+      font-size: pxToRem(24) !important;
+    }
   }
   &:not(.title):not(.subtitle) {
-    font-size: pxToRem(18);
-    line-height: pxToRem(30);
+    font-size: pxToRem(14);
+    line-height: pxToRem(24);
+
+    @media (min-width: $breakpoint-sm) {
+      font-size: pxToRem(16);
+      line-height: pxToRem(28);
+    }
   }
 
   &.text {
